--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ var ua = window.navigator.userAgent;
 var iOS = !!ua.match(/iPad/i) || !!ua.match(/iPhone/i);
 var webkit = !!ua.match(/WebKit/i);
 var iOSSafari = iOS && webkit && !ua.match(/CriOS/i); 
-if(iOSSafari) {window.location.href = "https://thehillnews.org/app/thn.mobileconfig"} else { window.location.href ="https://thehillnews.org/webapp"};
+if(iOSSafari) {window.location.href = "https://chuyennguyenhue.github.io/app/cnhspotlight.mobileconfig"} else { window.location.href ="https://chuyennguyenhue.github.io/cnhspotlight/"};
 }
 window.onload = myFunction;
 </script>
