--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@ var ua = window.navigator.userAgent;
 var iOS = !!ua.match(/iPad/i) || !!ua.match(/iPhone/i);
 var webkit = !!ua.match(/WebKit/i);
 var iOSSafari = iOS && webkit && !ua.match(/CriOS/i); 
-if(iOSSafari) {window.location.href = "https://chuyennguyenhue.github.io/app/cnhspotlight.mobileconfig"} else { window.location.href ="https://chuyennguyenhue.github.io/cnhspotlight/"};
+if(iOSSafari) {
+  //window.location.href = "https://chuyennguyenhue.github.io/app/cnhspotlight.mobileconfig"
+  window.location.href = "itms-services://?action=download-manifest&amp;url=https://chuyennguyenhue.github.io/app/app.plist"
+} 
+  else { window.location.href ="https://chuyennguyenhue.github.io/cnhspotlight/"};
 }
 window.onload = myFunction;
 </script>
